--- a/index.html
+++ b/index.html
@@ -157,34 +157,32 @@
         justify-content: center;
     }
 
-    .card {
-        background: #000;
-        padding: 20px;
-        border-radius: 15px;
-        box-shadow: 0 0 20px rgba(255,255,255,0.3);
-        text-align: center;
-        min-width: 150px;
-        transition: transform 0.3s ease;
-    }
+.card,
+.carda {
+  background: #000;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 0 20px rgba(255,255,255,0.3);
+  transition: transform 0.3s ease;
+  width: 100%;         /* take full width of container */
+  max-width: 100%;     /* prevent overflow */
+  box-sizing: border-box;
+}
 
-    .card:hover {
-        transform: translateY(-5px);
-    }
-      .carda {
-        background: #000;
-        padding: 20px;
-        border-radius: 15px;
-        box-shadow: 0 0 20px rgba(255,255,255,0.3);
-        text-align: left;
-        min-width: 150px;
-        margin-top: 20px;
-        max-width: 400px;
-        transition: transform 0.3s ease;
-    }
+.card {
+  text-align: center;
+}
 
-    .carda:hover {
-        transform: translateY(-5px);
-    }
+.carda {
+  text-align: left;
+  margin-top: 20px;
+}
+
+.card:hover,
+.carda:hover {
+  transform: translateY(-5px);
+}
+
 
     /* Snackbar */
 #snackbar {
@@ -602,4 +600,5 @@ function _0x2d3885(_0x247df3,_0x4de49e,_0x3f7248,_0x161494,_0x211cfa){return _0x
 </footer>
 </body>
 </html>
+
 
