--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
     }
 
     .result-cards {
-        display: none;
-        margin-top: 30px;
-        gap: 20px;
-        flex-wrap: wrap;
-        justify-content: center;
+ 		display: flex;        
+  		margin-top: 30px;
+  		gap: 20px;
+  		flex-wrap: wrap;       
+  		justify-content: center;
     }
 
 .card,
@@ -600,5 +600,6 @@ function _0x2d3885(_0x247df3,_0x4de49e,_0x3f7248,_0x161494,_0x211cfa){return _0x
 </footer>
 </body>
 </html>
+
 
 
