--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
   		gap: 20px;
   		flex-wrap: wrap;       
   		justify-content: center;
+		width: 100%;
+  		padding: 10px;
     }
 
 .card,
@@ -600,6 +602,7 @@ function _0x2d3885(_0x247df3,_0x4de49e,_0x3f7248,_0x161494,_0x211cfa){return _0x
 </footer>
 </body>
 </html>
+
 
 
 
