--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     }
 
     .result-cards {
- 		display: flex;        
+ 		display: none;        
   		margin-top: 30px;
   		gap: 20px;
   		flex-wrap: wrap;       
@@ -611,6 +611,7 @@ function _0x2d3885(_0x247df3,_0x4de49e,_0x3f7248,_0x161494,_0x211cfa){return _0x
 </footer>
 </body>
 </html>
+
 
 
 
