--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
   flex: 1 1 300px;       /* grows, shrinks, and starts around 300px */
   max-width: 100%;       /* never exceed container width */
   box-sizing: border-box;
+  height: auto; 
 }
 
 .card {
@@ -611,6 +612,7 @@ function _0x2d3885(_0x247df3,_0x4de49e,_0x3f7248,_0x161494,_0x211cfa){return _0x
 </footer>
 </body>
 </html>
+
 
 
 
