--- a/index.html
+++ b/index.html
@@ -194,7 +194,12 @@
   }
 }
 
-
+.card svg,
+.carda svg {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
 
     /* Snackbar */
 #snackbar {
@@ -612,6 +617,7 @@ function _0x2d3885(_0x247df3,_0x4de49e,_0x3f7248,_0x161494,_0x211cfa){return _0x
 </footer>
 </body>
 </html>
+
 
 
 
