--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ footer a:hover {
 
     <div class="result-cards" id="resultCards">
       <div class="carda" id="cardTob"><p>⚖️🍀 Please wait while your Destiny is getting written here... 🌔🟢</p></div>
-            <div class="card" id="cardDoba">🖋️⚫ Generating your predictions... 🟢📊</div>
+            <div class="carda" id="cardDoba">🖋️⚫ Generating your predictions... 🟢📊</div>
         <div class="card" id="cardDob"></div>
     </div>
 </div>
@@ -664,6 +664,7 @@ function _0x2d3885(_0x247df3,_0x4de49e,_0x3f7248,_0x161494,_0x211cfa){return _0x
 </footer>
 </body>
 </html>
+
 
 
 
