--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
  		display: none;        
   		margin-top: 30px;
   		gap: 20px;
-  		flex-wrap: wrap;       
+  		flex-direction: column;      
   		justify-content: center;
 		width: 100%;
   		padding: 10px;
@@ -664,6 +664,7 @@ function _0x2d3885(_0x247df3,_0x4de49e,_0x3f7248,_0x161494,_0x211cfa){return _0x
 </footer>
 </body>
 </html>
+
 
 
 
