--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
   max-width: 100%;
   height: auto;
   display: block;
+  margin: 0 auto;   
 }
 
     /* Snackbar */
@@ -664,6 +665,7 @@ function _0x2d3885(_0x247df3,_0x4de49e,_0x3f7248,_0x161494,_0x211cfa){return _0x
 </footer>
 </body>
 </html>
+
 
 
 
